feat: Modify download API to consider multipart downloading
Refs: MK8S-63
